# CohortBayes

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
src/cohortbayes/: __init__.py  dataops.py  diagnostics.py  model.py
tests/: datagen.py  eval.py
